--- a/index.html
+++ b/index.html
@@ -3,18 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ohmii-spark-academy</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Circuit Scribe</title>
+    <meta name="description" content="Interactive learning platform for electronics and embedded systems" />
+    <meta name="author" content="Circuit Scribe" />
 
-    <meta property="og:title" content="ohmii-spark-academy" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Circuit Scribe" />
+    <meta property="og:description" content="Interactive learning platform for electronics and embedded systems" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <!-- <meta name="twitter:card" content="summary_large_image" /> -->
   </head>
 
   <body>
