--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Circuit Scribe</title>
+    <title>CircuitCode</title>
     <meta name="description" content="Interactive learning platform for electronics and embedded systems" />
-    <meta name="author" content="Circuit Scribe" />
+    <meta name="author" content="CircuitCode" />
 
-    <meta property="og:title" content="Circuit Scribe" />
+    <meta property="og:title" content="CircuitCode" />
     <meta property="og:description" content="Interactive learning platform for electronics and embedded systems" />
     <meta property="og:type" content="website" />
 
-    <!-- <meta name="twitter:card" content="summary_large_image" /> -->
+
   </head>
 
   <body>
